--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,3 @@
 {
-  "routes": [
-    { "src": "/(.*)", "dest": "https://project-wallace-static.vercel.app/$1" }
-  ]
+  "rewrites": [{ "source": "/(.*)", "destination": "https://project-wallace-static.vercel.app/$1" }]
 }
